# pagination

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  pagination.cabal
.github/workflows/: ci.yaml
Data/: Pagination.hs
tests/: Main.hs
