name:                 pagination
version:              0.2.1
cabal-version:        1.18
tested-with:          GHC==8.4.4, GHC==8.6.5, GHC==8.8.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/pagination
bug-reports:          https://github.com/mrkkrp/pagination/issues
category:             Data
synopsis:             Framework-agnostic pagination boilerplate
build-type:           Simple
description:          Framework-agnostic pagination boilerplate.
extra-doc-files:      CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/pagination.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.11 && < 5.0
                    , deepseq          >= 1.3 && < 1.5
                    , exceptions       >= 0.6 && < 0.11
  exposed-modules:    Data.Pagination
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  if flag(dev)
    ghc-options:      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wnoncanonical-monad-instances
  default-language:   Haskell2010

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.11 && < 5.0
                    , QuickCheck       >= 2.10 && < 3.0
                    , exceptions       >= 0.6 && < 0.11
                    , hspec            >= 2.0 && < 3.0
                    , pagination
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
