cabal-version:   2.4
name:            pagination
version:         0.2.2
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.0.2 ghc ==9.2.5 ghc ==9.4.4
homepage:        https://github.com/mrkkrp/pagination
bug-reports:     https://github.com/mrkkrp/pagination/issues
synopsis:        Framework-agnostic pagination boilerplate
description:     Framework-agnostic pagination boilerplate.
category:        Data
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/pagination.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Data.Pagination
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5.0,
        deepseq >=1.3 && <1.5,
        exceptions >=0.6 && <0.11

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5.0,
        QuickCheck >=2.10 && <3.0,
        exceptions >=0.6 && <0.11,
        hspec >=2.0 && <3.0,
        pagination

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
